# HwMonitorService

./: .gitignore  .gitmodules  HwMonitorService.sln  HwMonitorService.vcxproj  HwMonitorService.vcxproj.filters  README.md  settings.txt
deploy-package/: CreateService.bat  DeleteService.bat  settings.txt
messages/: CompileMessages.bat  EventLogMessages.mc
src/: Config.cpp  Config.hpp  MyService.cpp  MyService.hpp  Protocol.hpp  SvcCommon.cpp  SvcCommon.hpp  SvcMain.cpp
tools/CppClient/: CMakeLists.txt  README.md
tools/CppClient/include/: HwMonitorClient.hpp
tools/CppClient/src/: HwMonitorClient.cpp
tools/CppClient/src/test/: main.cpp
tools/ListLHWMSensors/: ListLHWMSensors.cpp  ListLHWMSensors.vcxproj  ListLHWMSensors.vcxproj.filters  README.md
tools/LogReader/: LogReader.cpp  LogReader.vcxproj  LogReader.vcxproj.filters  README.md
